@@ -355,6 +355,18 @@ automate installs.
 </varlistentry>
 
 <varlistentry>
+<term>finish-install/keep-consoles</term>
+<listitem><para>
+
+During installations from serial or management console, the regular
+virtual consoles (VT1 to VT6) are normally disabled in
+<filename>/etc/inittab</filename>.
+Set to <userinput>true</userinput> to prevent this.
+
+</para></listitem>
+</varlistentry>
+
+<varlistentry>
 <term>cdrom-detect/eject</term>
 <listitem><para>
 
